@@ -572,6 +572,19 @@ else
     fi
 fi
 
+AC_CACHE_CHECK([for enhanced regular expression flag], nano_cv_flag_reg_extended,
+	       [AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <regex.h>]],
+						   [[
+						     #ifndef REG_ENHANCED
+						     error: No REG_ENHANCED support!
+						     #endif
+						   ]])],
+				  [nano_cv_flag_reg_extended="REG_EXTENDED | REG_ENHANCED"],
+				  [nano_cv_flag_reg_extended="REG_EXTENDED"])])
+
+AC_DEFINE_UNQUOTED(NANO_REG_EXTENDED, $nano_cv_flag_reg_extended,
+		   [Flag(s) to use to get the full range of extended regular expressions])
+
 if test x$color_support = xyes; then
 	# Now check for the end-of-word boundary support (/< and />).
 	AC_MSG_CHECKING([for GNU-style word boundary regex support])
@@ -601,7 +614,7 @@ int main(void)
     size_t nmatch;
     regmatch_t pmatch;
 
-    if (regcomp(&r, "\\\\>", REG_EXTENDED|REG_NOSUB))
+    if (regcomp(&r, "\\\\>", $nano_cv_flag_reg_extended|REG_NOSUB))
 	return 1;
     if (regexec(&r, "word boundary", nmatch, &pmatch, 0))
 	return 1;
@@ -639,8 +652,8 @@ int main(void)
 	AC_MSG_WARN([*** Couldn't successfully compile basic color test with or without _XOPEN_SOURCE_EXTENDED])
 	AC_MSG_WARN([*** This build may not compile. Consider configuring with --disable-color or installing ncurses])),
 	AC_MSG_WARN([*** Can't check need for _XOPEN_SOURCE_EXTENDED when cross-compiling]))
-    fi
-#fi
+#    fi
+fi
 
 AC_MSG_CHECKING([whether LINES and COLS can be redefined])
 AC_TRY_RUN([
